--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,shrink-to-fit=no">
     <title>Status &middot; A. M. Douglas</title>
     <meta name="description" content="Status checker for the websites actively hosted/maintained by A. M. Douglas">
+    <meta http-equiv="Upgrade-Insecure-Requests" content="1">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data:; script-src 'self' 'unsafe-inline' https:; img-src *; style-src 'self' 'unsafe-inline' https:;">
     <link rel="icon" href="https://cdn.rawgit.com/wnda/pivot/master/favicon.ico">
     <style>
       html,body,:root{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:100%;line-height:1.27;font-family:Roboto,Helmet,Freesans,sans-serif;overflow-x:hidden;background:hsl(0,0%,100%);color:hsl(240,60%,6.9%);text-rendering:auto;-webkit-text-size-adjust:100%;-webkit-overflow-scrolling:touch;touch-action:manipulation;-webkit-font-smoothing:antialiased;-webkit-font-smoothing:subpixel-antialiased;-moz-osx-font-smoothing:grayscale;*zoom:1}html,body{min-height:100vh}*,:before,:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;margin:0;padding:0;border:0;vertical-align:baseline;-webkit-tap-highlight-color:transparent;-webkit-overflow-scrolling:touch;touch-action:manipulation}details,main,summary{display:block}main{max-width:992px;margin:0 auto}
