--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="grid">
             <div class="cell cell-sm-7 cell-md-7 cell-lg-7">
               <h2>
-                <a class="item-title" href="https://robomonkey.org/" data-src="http://robomonkey.org/uploads/logo.png">robomonkey.org</a>
+                <a class="item-title" href="https://robomonkey.org/" data-src="https://robomonkey.org/img/avatars/13.gif">robomonkey.org</a>
               </h2>
               <p>
                 <span class="message">Establishing connection&hellip;</span>
